// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NameValueTable Empty 1`] = `
<div>
  <dl
    class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
  />
</div>
`;

exports[`Storyshots NameValueTable With Children 1`] = `
<div>
  <dl
    class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
  >
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
    >
      MyName0
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
      >
        MyValue0
      </span>
    </dd>
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
    >
      MyName1
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
      >
        MyValue1
      </span>
    </dd>
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
    >
      MyName2
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
      >
        MyValue2
      </span>
    </dd>
  </dl>
</div>
`;

exports[`Storyshots NameValueTable With Hidden Last Children 1`] = `
<div>
  <dl
    class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
  >
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
    >
      MyName0
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
      >
        MyValue0
      </span>
    </dd>
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
    >
      MyName1
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
      >
        MyValue1
      </span>
    </dd>
  </dl>
</div>
`;
